--- a/mysql/mysql.cnf
+++ b/mysql/mysql.cnf
@@ -23,7 +23,7 @@
 pid-file        = /var/run/mysqld/mysqld.pid
 socket          = /var/run/mysqld/mysqld.sock
 datadir         = /var/lib/mysql
-secure-file-priv= NULL
+secure-file-priv= /etc/mysql/flag
 
 # Custom config should go here
 !includedir /etc/mysql/conf.d/
