更新php/Dockerfile, 手动安装旧版本libssl，保持兼容性

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,13 +29,13 @@ services:
         restart: always
         networks:
             - default
+            
     mysql:
         links: 
             - php
         image: xiabee/mysql
-        build: ./mysql
         volumes: 
-            - ./mysql/mysql.cnf:/etc/mysql/my.cnf
+            - ./mysql/my.cnf:/etc/mysql/my.cnf
             - "$PWD/FLAG:/etc/mysql/flag/flag:ro"
             # 挂载flag，设置为只读
             - ./mysql/init:/docker-entrypoint-initdb.d/
